<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>libs</artifactId>
        <groupId>ml.mops.repo</groupId>
        <version>IN_DEV</version>
    </parent>

    <groupId>ml.mops.base</groupId>
    <artifactId>mops-base</artifactId>
    <name>Mops :: Libs :: Mops Base</name>

    <properties>
        <java.version>18</java.version>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

<!--    <profiles>-->
<!--        <profile>-->
<!--            <id>windows</id>-->
<!--            <activation>-->
<!--                <os>-->
<!--                    <family>Windows</family>-->
<!--                </os>-->
<!--            </activation>-->
<!--            <properties>-->
<!--                <script.executor>powershell.exe</script.executor>-->
<!--                <script.to.execute>Get-Process | Sort CPU -descending | Select -first 5 -Property ID,ProcessName,CPU</script.to.execute>-->
<!--            </properties>-->
<!--        </profile>-->
<!--        <profile>-->
<!--            <id>unix</id>-->
<!--            <activation>-->
<!--                <os>-->
<!--                    <family>unix</family>-->
<!--                </os>-->
<!--            </activation>-->
<!--            <properties>-->
<!--                <script.executor>bash</script.executor>-->
<!--                <script.to.execute>${basedir}/scripts/nvn-install-1_19.sh</script.to.execute>-->
<!--            </properties>-->
<!--        </profile>-->
<!--        <profile>-->
<!--            <id>auto</id>-->
<!--            <activation>-->
<!--                <property>-->
<!--                    <name>!unsetDefaultProfile</name>-->
<!--                </property>-->
<!--            </activation>-->

<!--        </profile>-->
<!--    </profiles>-->

    <repositories>
        <repository>
            <id>purpur</id>
            <url>https://repo.purpurmc.org/snapshots</url>
        </repository>
        <repository>
            <id>bg-software</id>
            <url>https://repo.bg-software.com/repository/nms/</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Default Repository</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>nms-local</id>
            <url>https://repo.codemc.io/repository/nms/</url>
        </repository>
        <repository>
            <id>minebench</id>
            <url>https://repo.minebench.de/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype-oss-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.purpurmc.purpur</groupId>
            <artifactId>purpur-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>craftbukkit</artifactId>
            <version>1.19-R0.1-20220727.182949-7</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.14.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.14.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>3.11.49</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.purpurmc.purpur</groupId>
            <artifactId>purpur-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>3.11.49</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>brigadier</artifactId>
            <version>1.0.500</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
        </dependency>
<!--        Я их добавил в пом только мопс бейса так как по идеи они должны загружать и в другие (ну типо зависимость зависимости), но скорее всего оно не будет работать без include (чекни pom.xml у вулбатла для примера) -->
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>discord-webhooks</artifactId>
            <version>0.8.2</version>
        </dependency>
<!--        ДЛЯ РАБОТЫ НЕОБХОДИМ МЕМ в plugin.yml: softdepend: [NoteBlockAPI]-->
        <dependency>
            <groupId>com.github.koca2000</groupId>
            <artifactId>NoteBlockAPI</artifactId>
            <version>-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>


    </dependencies>

    <build>
        <finalName>mops-base</finalName>
        <plugins>
<!--            <plugin>-->
<!--                <groupId>org.codehaus.mojo</groupId>-->
<!--                <artifactId>exec-maven-plugin</artifactId>-->
<!--                <version>3.1.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>minecraft_server</id>-->
<!--                        <phase>initialize</phase>-->
<!--                        <configuration>-->
<!--                            <executable>${script.executor}</executable>-->
<!--                            <commandlineArgs>${script.to.execute}</commandlineArgs>-->
<!--                        </configuration>-->
<!--                        <goals>-->
<!--                            <goal>exec</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--                <configuration>-->
<!--                    <executable>${basedir}\scripts\mvn-install-1_19.sh</executable>-->
<!--                    <workingDirectory>${basedir}</workingDirectory>-->
<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <version>3.10.1</version>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>